--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -14,12 +14,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="shared-styles">
   <template>
     <style>
-      .cardz {
-        margin: 24px;
+      .card {
+        margin: 24px 10%;
         padding: 16px;
-        color: #757575;
+        color: black;
         border-radius: 5px;
-        background-color: #fff;
+        background-color: rgba(200,200,200,0.5);
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
       }
 
@@ -39,6 +39,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin: 16px 0;
         color: #212121;
         font-size: 22px;
+      }
+
+
+       paper-button {
+            color: var(--app-primary-color);
       }
     </style>
   </template>
