--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -33,7 +33,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .countdown2{
         display: flex;
         flex-wrap: wrap;
-        width: 400px;
+        width: 200px;
+        background: grey;
+        border-radius: 5px;
       }
 
       .countdown2 div:not(.string){
