modifiche di stile, soprattutto per RSVP

--- a/src/my-list.html
+++ b/src/my-list.html
@@ -30,9 +30,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h3>{{calcString("listatitolo", langPath, lingua)}}</h3>
-      <div>{{calcString("listacont1", langPath, lingua)}}</div>
-      <div>{{calcString("listacont2", langPath, lingua)}}</div>
-      <div>{{calcString("listacont3", langPath, lingua)}}</div>
+      <span>{{calcString("listacont1", langPath, lingua)}}</span>
+      <span>{{calcString("listacont2", langPath, lingua)}}</span>
+      <span>{{calcString("listacont3", langPath, lingua)}}</span>
   </template>
 
   <script>
