--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -17,10 +17,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       .card {
         margin: 24px 10%;
         padding: 16px;
-        color: black;
+        color: white;
         border-radius: 5px;
-        background-color: rgba(200,200,200,0.9);
+        background-color: rgba(8,6,6,0.49);
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+        font-size: 17px;
+        line-height: 1.8;
+        font-style: italic;
       }
 
       .circle {
@@ -37,7 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       h1 {
         margin: 16px 0;
-        color: #212121;
+        color: #4c1c24;
         font-size: 22px;
       }
 
