--- a/src/imports.html
+++ b/src/imports.html
@@ -30,6 +30,7 @@
 <link rel="import" href="../bower_components/polymerfire/polymerfire.html">
 <link rel="import" href="../bower_components/time-elements/time-elements.js">
 <link rel="import" href="my-login.html">
+<link rel="import" href="my-photo-dialog.html">
 
 <script src="https://www.gstatic.com/firebasejs/3.6.9/firebase.js"></script>
 <script src="../bower_components/moment/moment.js"></script>
