--- a/src/my-app.html
+++ b/src/my-app.html
@@ -101,9 +101,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       #login-fab{
         position: fixed;
-        bottom: 20px;
+        bottom: 10px;
         right: 20px;
         background-color: var(--app-primary-color);
+      }
+
+      .lang-container{
+        position: fixed;
+        top: 10px;
+        right: 20px;
       }
     </style>
 
@@ -152,15 +158,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <!-- Main content -->
       <app-header-layout has-scrolling-region>
-        <app-header condenses reveals effects="waterfall">
+        <!--<app-header condenses reveals effects="waterfall">
           <app-toolbar>
             <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
             <div main-title>Emma &amp Walter Wedding Site</div>
             <img class="langBtn" on-tap="toIta" src="../images/italy_flag.ico" width="40px">
             <img class="langBtn" on-tap="toEng" src="../images/united_kingdom_flag.ico" width="40px">
           </app-toolbar>
-        </app-header>
+        </app-header>-->
 
+        
+          <h2>Emma &amp Walter Wedding Site</h2>
+          <div class="lang-container">
+            <img class="langBtn" on-tap="toIta" src="../images/italy_flag.ico" width="30px">
+            <img class="langBtn" on-tap="toEng" src="../images/united_kingdom_flag.ico" width="30px">
+          </div>
         <!--<div id="navigation">
           <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
             <a name="view1" href="/view1">Home</a>
