--- a/src/my-rsvp.html
+++ b/src/my-rsvp.html
@@ -26,18 +26,43 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       #error{
         color: red;
       }
+
+      .form{
+        width: 50%;
+        background: white;
+        padding: 10px;
+        border-radius: 4px;
+        border: 4px dotted;
+        border-color: var(--app-primary-color);
+        color: black;
+        margin-top: 20px;
+      }
+
+      paper-input{
+        color: black;
+      }
+
+      paper-button{
+        padding: 8px;
+      }
+
+      #edit-button{
+        background:white;
+      }
+
     </style>
 
     <div class="card">
+      <h3>RSVP</h3>
       <div>{{calcString("saluto", langPath, lingua)}} {{nome}}!</div>
 
       <div hidden$="{{calcStatus(statusKnown)}}">{{calcString("farelogin", langPath, lingua)}}</div>
       <div hidden$="{{!alreadyAnswered}}">
         <div><h3 >{{calcString("giarisposto", langPath, lingua)}}</h3></div>
-        <paper-button raised on-tap="toggleEdit">{{calcString("pulsantemodifica", langPath, lingua)}}</paper-button>
+        <paper-button id="edit-button" raised on-tap="toggleEdit">{{calcString("pulsantemodifica", langPath, lingua)}}</paper-button>
       </div>
       
-      <div id="full" hidden$="{{!pranzoFormVisible}}">
+      <div class="form" id="full" hidden$="{{!pranzoFormVisible}}">
         <div>{{calcString("invitofull", langPath, lingua)}}</div>
         <div>{{calcString("confermare", langPath, lingua)}}</div>
          <paper-radio-group id="risposta" required selected="yes">
@@ -51,7 +76,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          <paper-textarea disabled="{{alreadyAnswered}}" id="altroform" label="{{calcString('commenti', langPath, lingua)}}"></paper-textarea>
          <paper-button disabled="{{alreadyAnswered}}" raised on-tap="saveFullAnswer">{{calcString('pulsanteinvia', langPath, lingua)}}</paper-button>
       </div>
-      <div id="party" hidden$="{{!partyFormVisible}}">
+      <div class="form" id="party" hidden$="{{!partyFormVisible}}">
         <div>{{calcString("invitoparty", langPath, lingua)}}</div>
         <div>{{calcString("confermare", langPath, lingua)}}</div>
         <paper-radio-group disabled="{{alreadyAnswered}}" id="risposta2" selected="yes">
