--- a/src/my-where.html
+++ b/src/my-where.html
@@ -30,24 +30,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h3>{{calcString("dovetitolo1", langPath, lingua)}}</h3>
-      <div>{{calcString("dovetitolo1cont1", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo1cont2", langPath, lingua)}}</div>
+      <span>{{calcString("dovetitolo1cont1", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo1cont2", langPath, lingua)}}</span>
       <h3>{{calcString("dovetitolo2", langPath, lingua)}}</h3>
-      <div>{{calcString("dovetitolo2cont1", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo2cont2", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo2cont3", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo2cont4", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo2cont5", langPath, lingua)}}</div>
+      <span>{{calcString("dovetitolo2cont1", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo2cont2", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo2cont3", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo2cont4", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo2cont5", langPath, lingua)}}</span>
       <h3>{{calcString("dovetitolo3", langPath, lingua)}}</h3>
-      <div>{{calcString("dovetitolo3cont1", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont2", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont3", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont4", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont5", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont6", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont7", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont8", langPath, lingua)}}</div>
-      <div>{{calcString("dovetitolo3cont9", langPath, lingua)}}</div>
+      <span>{{calcString("dovetitolo3cont1", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont2", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont3", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont4", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont5", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont6", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont7", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont8", langPath, lingua)}}</span>
+      <span>{{calcString("dovetitolo3cont9", langPath, lingua)}}</span>
   </template>
 
   <script>
