--- a/src/my-app.html
+++ b/src/my-app.html
@@ -62,11 +62,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       app-drawer {
-      --app-drawer-width: 200px;
-      --app-drawer-scrim-background: rgba(0, 0, 100, 0.8);
+      --app-drawer-width: 300px;
+      --app-drawer-scrim-background: rgba(8,6,6,0.49);
       --app-drawer-content-container: {
         background-color:  transparent;  /* #B0BEC5;  */
-        padding-top: 256px;
+        padding-top: 100px;
         font-size: 1.1rem;
         /*transition: all ease 0.5s;*/
         }
@@ -82,17 +82,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         display: block;
         padding: 0 16px;
         text-decoration: none;
-        color: #555;
+        color: white;
         line-height: 40px;
-        font-weight: 900;
+        /*font-weight: 900;  */
+        background: rgba(8,6,6,0.49);
+        margin: 5px 0px;
+        border-radius: 4px;
+        transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s;
+        max-height: 40px;
+        font-family: 'Bebas Neue';
+        font-size: 24px;
       }
 
       .drawer-list a.iron-selected {
         color: var(--app-primary-color);
         font-weight: bold;
-        font-size:1.2rem;
-        border-left: 7px solid var(--app-primary-color);
-        /*transition: all ease 0.8s;*/
+        /*font-size:1.2rem; */
+        border-right: 7px solid var(--app-primary-color);
+        transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s;
+        background: rgba(200,200,200,0.7);
+        margin-right: 30px;
       }
 
       .langBtn:hover{
@@ -111,10 +120,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         top: 10px;
         right: 20px;
       }
+
+      .title{
+        padding: 10px;
+        text-align: center;
+      }
+
+      .title h1{
+        font-style: italic;
+        color: var(--app-primary-color);
+        font-family: 'Pacifico';
+        font-size: 40px;
+      }
+
+
+
+
     </style>
 
 
-        <firebase-app auth-domain="emmawalterwedding.firebaseapp.com"
+    <firebase-app auth-domain="emmawalterwedding.firebaseapp.com"
       database-url="https://emmawalterwedding.firebaseio.com"
       api-key="AIzaSyBHvgsIFt0NQMTVn0Z8Zc_8vZcPAauejrc"
       name="invitati">
@@ -144,11 +169,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <app-drawer-layout fullbleed>
       <!-- Drawer content -->
       <app-drawer id="drawer">
+
+          <div class="title">
+            <h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
+            <h3>{{calcString("hometitolo2", langPath, lingua)}}</h3>
+            <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>
+          </div>
+
+
           <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">Home</a>
           <a name="proposal" href="/proposal">{{calcString("proposta", langPath, lingua)}}</a>
-          <a name="risposte" href="/risposte">risposte</a>
-          <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
+          <!--<a name="risposte" href="/risposte">risposte</a>-->
+          <!--<a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>-->
           <a name="list" href="/list">{{calcString("lista", langPath, lingua)}}</a>
           <a name="rsvp" href="/rsvp">RSVP</a>
           <a name="where" href="/where" id="dove">{{calcString("dove", langPath, lingua)}}</a>
@@ -168,7 +201,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </app-header>-->
 
         
-          <h2>Emma &amp Walter Wedding Site</h2>
+          <!--<h2>Emma &amp Walter Wedding Site</h2>-->
           <div class="lang-container">
             <img class="langBtn" on-tap="toIta" src="../images/italy_flag.ico" width="30px">
             <img class="langBtn" on-tap="toEng" src="../images/united_kingdom_flag.ico" width="30px">
