--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -71,9 +71,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
+      <!--<h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
       <h2>{{calcString("hometitolo2", langPath, lingua)}}</h2>
-      <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>
+      <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>-->
 
       <div class="text">{{calcString("homecont1", langPath, lingua)}}</div>
       <div class="text">{{calcString("homecont2", langPath, lingua)}}</div>
@@ -83,7 +83,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         {{countDown(trigger)}}
         </div>
 
-        <div>
+        <!--<div>
           <div class="countdown2">
             <div class="number">11</div>
             <div class="dot"></div>
@@ -96,7 +96,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <div class="filler"></div>
             <div class="string">ore</div>
            </div>
-        </div>
+        </div>-->
 
     </div>
   </template>
