--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -23,7 +23,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
         font-size: 17px;
         line-height: 1.8;
-        font-style: italic;
+        /*font-style: italic; */
+        font-family: 'Colaborate Regular';
       }
 
       .circle {
@@ -48,6 +49,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        paper-button {
             color: var(--app-primary-color);
       }
+
     </style>
   </template>
 </dom-module>
