logo gatti e sfondo piu scuro

--- a/src/my-invitati.html
+++ b/src/my-invitati.html
@@ -45,7 +45,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </firebase-query>-->
 
     <div class="card">
-      <h3>{{calcString("invitati", langPath, lingua)}}</h3>
+      <h3 class="page-title">{{calcString("invitati", langPath, lingua)}}</h3>
       <div>{{calcString("emma", langPath, lingua)}}</div>
 
       <paper-input label='{{calcString("nome", langPath, lingua)}}' id="nome"></paper-input>
