--- a/src/my-list.html
+++ b/src/my-list.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <h3>{{calcString("listatitolo", langPath, lingua)}}</h3>
+      <h3 class="page-title">{{calcString("listatitolo", langPath, lingua)}}</h3>
       <span>{{calcString("listacont1", langPath, lingua)}}</span>
       <span>{{calcString("listacont2", langPath, lingua)}}</span>
       <span>{{calcString("listacont3", langPath, lingua)}}</span>
