--- a/src/my-proposal.html
+++ b/src/my-proposal.html
@@ -47,7 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
       <div class="card">
-        <h3>{{calcString("propostatitolo1", langPath, lingua)}}</h3>
+        <h3 class="page-title">{{calcString("propostatitolo1", langPath, lingua)}}</h3>
         <span>{{calcString("propostacont1", langPath, lingua)}}</span>
         <span>{{calcString("propostacont2", langPath, lingua)}}</span>
         <span>{{calcString("propostacont3", langPath, lingua)}}</span>
