--- a/src/my-where.html
+++ b/src/my-where.html
@@ -29,7 +29,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <h3>{{calcString("dovetitolo1", langPath, lingua)}}</h3>
+      <h3 class="page-title">{{calcString("dovetitolo1", langPath, lingua)}}</h3>
       <span>{{calcString("dovetitolo1cont1", langPath, lingua)}}</span>
       <span>{{calcString("dovetitolo1cont2", langPath, lingua)}}</span>
       <h3>{{calcString("dovetitolo2", langPath, lingua)}}</h3>
