--- a/src/my-app.html
+++ b/src/my-app.html
@@ -63,7 +63,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       app-drawer {
       --app-drawer-width: 300px;
-      --app-drawer-scrim-background: rgba(8,6,6,0.49);
+      --app-drawer-scrim-background: rgba(8,6,6,0.69);
       --app-drawer-content-container: {
         background-color:  transparent;  /* #B0BEC5;  */
         padding-top: 100px;
@@ -85,10 +85,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         color: white;
         line-height: 40px;
         /*font-weight: 900;  */
-        background: rgba(8,6,6,0.49);
+        background: rgba(8,6,6,0.69);
         margin: 5px 0px;
         border-radius: 4px;
-        transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s;
+        transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s, color ease 0.2s;
         max-height: 40px;
         font-family: 'Bebas Neue';
         font-size: 24px;
@@ -99,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: bold;
         /*font-size:1.2rem; */
         border-right: 7px solid var(--app-primary-color);
-        transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s;
+        transition: border-right ease 0.4s, background ease 0.8s, margin-right ease 0.4s, color ease 0.2s;
         background: rgba(200,200,200,0.7);
         margin-right: 30px;
       }
@@ -113,6 +113,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         bottom: 10px;
         right: 20px;
         background-color: var(--app-primary-color);
+      }
+
+      #logo-image{
+       /* position: fixed; */
+        bottom:10px;
+        left: 20px;
+        width: 110px;
+        border-radius: 4px;
+        opacity: 0.9;
       }
 
       .lang-container{
@@ -133,8 +142,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-size: 40px;
       }
 
-
-
+      .title h2, .title h3{
+          font-family: 'Colaborate Bold';
+      }
 
     </style>
 
@@ -172,10 +182,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <div class="title">
             <h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
+            <img id="logo-image" src="../images/cats_bottle_glass_bord.jpg" />
             <h3>{{calcString("hometitolo2", langPath, lingua)}}</h3>
             <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>
           </div>
-
+          
 
           <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="view1" href="/view1">Home</a>
@@ -206,18 +217,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <img class="langBtn" on-tap="toIta" src="../images/italy_flag.ico" width="30px">
             <img class="langBtn" on-tap="toEng" src="../images/united_kingdom_flag.ico" width="30px">
           </div>
-        <!--<div id="navigation">
-          <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-            <a name="view1" href="/view1">Home</a>
-            <a name="risposte" href="/risposte">risposte</a>
-            <a name="invitati" href="/invitati">{{calcString("invitati", langPath, lingua)}}</a>
-            <a name="rsvp" href="/rsvp">RSVP</a>
-            <a name="where" href="/where" id="dove">{{calcString("dove", langPath, lingua)}}</a>
-            <a name="" href="">{{calcString("quando", langPath, lingua)}}</a>
-            <a name="" href="" on-tap="prova">Test</a>
-          </iron-selector>
-      </div>-->
-
         <iron-pages
             selected="[[page]]"
             attr-for-selected="name"
@@ -257,6 +256,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      status-known="{{statusKnown}}"
      nome="{{nome}}"
      password="{{password}}"></my-login>
+
+     
+
 
   </template>
 
