--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 16px;
         color: white;
         border-radius: 5px;
-        background-color: rgba(8,6,6,0.49);
+        background-color: rgba(8,6,6,0.69);
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
         font-size: 17px;
         line-height: 1.8;
@@ -48,6 +48,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
        paper-button {
             color: var(--app-primary-color);
+      }
+
+      .page-title{
+         background: rgba(200,200,200,0.7);
+         color: var(--app-primary-color);
+         font-family: 'Colaborate Bold';
+         font-size: 32px;
+         border-left: 7px solid;
+         border-color: var(--app-primary-color);
+         border-radius: 4px;
+         width: 400px;
+         padding-left: 20px; 
       }
 
     </style>
