--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -62,6 +62,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          padding-left: 20px; 
       }
 
+
+    .prova{
+      color: green;
+      font-size: 50px ;
+      }
+
+
     </style>
   </template>
 </dom-module>
