metti thumbnails e iron image

--- a/src/my-photo-dialog.html
+++ b/src/my-photo-dialog.html
@@ -32,6 +32,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          display: flex;
          padding: 10px;
          z-index: 9999;
+
+         /*position: fixed;
+         top:50px;*/
        }
 
        #photoDialog button{
@@ -48,7 +51,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
        #photoDialog img{
-         width: 100%;
+         width: 100%; 
          margin:0px;
          padding:0px;
          align-self: center;
