aggiunti contenuti su combriccola

--- a/src/my-combriccola.html
+++ b/src/my-combriccola.html
@@ -43,8 +43,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 100%;
       }
 
+      img:first-of-type{
+        width: 80%;
+      }
+
       img{
-        width: 100%;
+        width: 50%;
       }
 
       
