un po di modifiche per mobile (iron media query)

--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -58,14 +58,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
          border-left: 7px solid;
          border-color: var(--app-primary-color);
          border-radius: 4px;
-         width: 400px;
+         width: 87%;
          padding-left: 20px; 
       }
 
+      .title{
+        padding: 10px;
+        text-align: center;
+      }
 
-    .prova{
-      color: green;
-      font-size: 50px ;
+      
+      .title h1{
+        font-style: italic;
+        color: white;
+        font-family: 'Pacifico';
+        font-size: 40px;
+      }
+
+      .title h2, .title h3{
+          font-family: 'Colaborate Bold';
       }
 
 
