--- a/src/my-view1.html
+++ b/src/my-view1.html
@@ -70,10 +70,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
+    <iron-media-query query="(max-width: 600px)" query-matches="{{mobile}}"></iron-media-query>
+
     <div class="card">
-      <!--<h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
-      <h2>{{calcString("hometitolo2", langPath, lingua)}}</h2>
-      <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>-->
+      <template is="dom-if" if="{{mobile}}">
+        <div class="title">
+              <h1>{{calcString("hometitolo1", langPath, lingua)}}</h1>
+              <!--<img id="logo-image" src="../images/cats_bottle_glass_w.jpg" />-->
+              <h3>{{calcString("hometitolo2", langPath, lingua)}}</h3>
+              <h2>{{calcString("hometitolo3", langPath, lingua)}}</h2>
+        </div>
+      </template>
 
       <div class="text">{{calcString("homecont1", langPath, lingua)}}</div>
       <div class="text">{{calcString("homecont2", langPath, lingua)}}</div>
