--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -70,7 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       
       .title h1{
         font-style: italic;
-        color: white;
+        color: black;
         font-family: 'Pacifico';
         font-size: 40px;
       }
