--- a/public/src/my-view404.html
+++ b/public/src/my-view404.html
@@ -11,7 +11,7 @@
     </style>
 
     
-    Oops you hit a 404. <a href="/">Head back to home.</a>
+    Oops, dove te pensavi de andar?. <a href="/">Torna a casa.</a>
   </template>
 
   <script>Polymer({is:"my-view404"});</script>
