--- a/public/src/shared-styles.html
+++ b/public/src/shared-styles.html
@@ -5,12 +5,16 @@
   <template>
     <style>
       .card {
-        margin: 24px;
+        margin: 24px 10%;
         padding: 16px;
-        color: #757575;
+        color: white;
         border-radius: 5px;
-        background-color: #fff;
+        background-color: rgba(8,6,6,0.69);
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+        font-size: 17px;
+        line-height: 1.8;
+        /*font-style: italic; */
+        font-family: 'Colaborate Regular';
       }
 
       .circle {
@@ -27,9 +31,27 @@
 
       h1 {
         margin: 16px 0;
-        color: #212121;
+        color: #4c1c24;
         font-size: 22px;
       }
+
+
+       paper-button {
+            color: var(--app-primary-color);
+      }
+
+      .page-title{
+         background: rgba(200,200,200,0.7);
+         color: var(--app-primary-color);
+         font-family: 'Colaborate Bold';
+         font-size: 32px;
+         border-left: 7px solid;
+         border-color: var(--app-primary-color);
+         border-radius: 4px;
+         width: 400px;
+         padding-left: 20px; 
+      }
+
     </style>
   </template>
 </dom-module>
