--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -15,12 +15,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <template>
     <style>
       .card {
-        margin: 24px 10%;
-        padding: 16px;
-        color: white;
+        margin:  var(--app-card-margin); /* 24px 10%;  */
+        padding:  var(--app-card-padding) ; /*   16px;  */
+        color: var(--app-card-color);
         border-radius: 5px;
-        background-color: rgba(8,6,6,0.69);
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+        background-color: var(--app-card-background);
+        box-shadow: var(--app-card-box-shadow); /*  0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);  */
         font-size: 17px;
         line-height: 1.8;
         /*font-style: italic; */
